<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/sky_blue_crayola"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="20sp"
        android:elevation="10dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        app:cardBackgroundColor="@color/alice_blue"
        app:cardCornerRadius="12dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:id="@+id/app_textIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:fontFamily="@font/opensans_semibold"
            android:gravity="center_horizontal"
            android:text="@string/result_prior"
            android:textAlignment="center"
            android:textColor="@color/dirty_black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="331dp"
        android:layout_margin="20sp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/alice_blue"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        tools:layout_editor_absoluteX="200dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/app_textMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_medium"
                android:gravity="center_horizontal"
                android:text="@string/result_mild"
                android:textAlignment="center"
                android:textColor="@color/dirty_black"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.093"
                tools:layout_conversion_absoluteHeight="130dp"
                tools:layout_conversion_absoluteWidth="371dp"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/app_textMore2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_medium"
                android:gravity="center_horizontal"
                android:text="@string/result_mild_description"
                android:textAlignment="center"
                android:textColor="@color/dirty_black"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_textMore"
                tools:layout_conversion_absoluteHeight="130dp"
                tools:layout_conversion_absoluteWidth="371dp"
                tools:layout_editor_absoluteX="0dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

